fix: right margin collapse on work card display

--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body {
   position: absolute;
   right: 8px;
   top: 8px;
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   background-color: #888;
   border-radius: 50%;
   /* transition: 0.6s; */
@@ -55,7 +55,7 @@ body {
 .close-button:after {
   display: inline-block;
   content: "\00d7"; /* This will render the 'X' */
-  font-size: 32px;
+  font-size: 23px;
   line-height: 100%;
 }
 
@@ -449,12 +449,12 @@ header {
 @media screen and (max-width: 1000px) {
   #work-card {
     background-color: #ffffff;
-    width: 400px;
+    width: 386px;
     display: none;
     position: fixed;
     /* height: 90vh; */
     border-radius: 20px;
-    left: calc((100vw - 400px) / 2);
+    left: calc((100vw - 386px) / 2);
     top: 4vh;
     text-align: center;
   }
